// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Client Editor when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-80 MuiTypography-display3-82 MuiTypography-gutterBottom-97"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-119 MuiButton-root-104 MuiButton-raised-109 MuiButton-raisedPrimary-110 ClientEditor-button-79"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-105"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
      <button
        className="MuiButtonBase-root-119 MuiButton-root-104 MuiButton-raised-109 ClientEditor-button-79"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-105"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-130 MuiFormControl-marginNormal-131 EditableTextField-textField-129"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-139 MuiInputLabel-root-134 MuiInputLabel-formControl-135 MuiInputLabel-animated-138 MuiInputLabel-shrink-137"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-144 MuiInput-formControl-145 MuiInput-underline-148"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-152"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Editor when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-158 MuiTypography-display3-160 MuiTypography-gutterBottom-175"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-197 MuiButtonBase-disabled-198 MuiButton-root-182 MuiButton-raised-187 MuiButton-raisedPrimary-188 MuiButton-disabled-191 ClientEditor-button-157"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-183"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-197 MuiButtonBase-disabled-198 MuiButton-root-182 MuiButton-raised-187 MuiButton-disabled-191 ClientEditor-button-157"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-183"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-201 MuiFormControl-marginNormal-202 EditableTextField-textField-200"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-210 MuiInputLabel-root-205 MuiInputLabel-formControl-206 MuiInputLabel-animated-209 MuiInputLabel-shrink-208"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-215 MuiInput-disabled-218 MuiInput-formControl-216 MuiInput-underline-219"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-223 MuiInput-disabled-218"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Editor with a client 1`] = `
<form>
  <h1
    className="MuiTypography-root-2 MuiTypography-display3-4 MuiTypography-gutterBottom-19"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-44"
        />
      </button>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 MuiButton-raisedSecondary-33 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-44"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-52 MuiFormControl-marginNormal-53 EditableTextField-textField-51"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-61 MuiInputLabel-root-56 MuiInputLabel-formControl-57 MuiInputLabel-animated-60 MuiInputLabel-shrink-59"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-66 MuiInput-formControl-67 MuiInput-underline-70"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-74"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Clients List with adding a new client 1`] = `
<div>
  <h2
    className="MuiTypography-root-412 MuiTypography-title-418 MuiTypography-gutterBottom-429"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-436 ClientsList-root-408"
  >
    <thead
      className="MuiTableHead-root-437"
    >
      <tr
        className="MuiTableRow-root-438 MuiTableRow-head-441"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-head-444"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-451"
    >
      <tr
        className="MuiTableRow-root-438"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-body-445"
          scope={undefined}
        >
          <div
            className="MuiInput-root-452 MuiInput-disabled-455 MuiInput-underline-456"
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-460 MuiInput-disabled-455"
              defaultValue={undefined}
              disabled={true}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Some New Client"
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-body-445 ClientsList-actionCell-410"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-409"
          >
            <button
              className="MuiButtonBase-root-480 MuiButtonBase-disabled-481 MuiButton-root-465 MuiButton-flatPrimary-467 MuiButton-disabled-474"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="-1"
              type="button"
            >
              <span
                className="MuiButton-label-466"
              >
                Add
              </span>
            </button>
            <div
              className="MuiCircularProgress-root-483 MuiCircularProgress-colorPrimary-484 ClientsList-buttonProgress-411"
              role="progressbar"
              style={
                Object {
                  "height": 25,
                  "width": 25,
                }
              }
            >
              <svg
                className="MuiCircularProgress-svg-486 MuiCircularProgress-svgIndeterminate-487"
                viewBox="0 0 50 50"
              >
                <circle
                  className="MuiCircularProgress-circle-488 MuiCircularProgress-circleIndeterminate-489"
                  cx={25}
                  cy={25}
                  fill="none"
                  r={20}
                  strokeWidth={3.6}
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-438"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-body-445"
          scope={undefined}
        >
          <a>
            Some Client
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Clients List with loading all clients 1`] = `
<div>
  <h2
    className="MuiTypography-root-314 MuiTypography-title-320 MuiTypography-gutterBottom-331"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-338 ClientsList-root-310"
  >
    <thead
      className="MuiTableHead-root-339"
    >
      <tr
        className="MuiTableRow-root-340 MuiTableRow-head-343"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-345 MuiTableCell-head-346"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-353"
    >
      <tr
        className="MuiTableRow-root-340"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-345 MuiTableCell-body-347"
          scope={undefined}
        >
          <div
            className="MuiInput-root-354 MuiInput-underline-358"
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-362"
              defaultValue={undefined}
              disabled={undefined}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-345 MuiTableCell-body-347 ClientsList-actionCell-312"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-311"
          >
            <button
              className="MuiButtonBase-root-382 MuiButton-root-367 MuiButton-flatPrimary-369"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-368"
              >
                Add
              </span>
              <span
                className="MuiTouchRipple-root-385"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-340"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-345 MuiTableCell-body-347"
          colSpan={2}
          scope={undefined}
        >
          <div
            className="MuiLinearProgress-root-392 MuiLinearProgress-colorPrimary-393"
            mode="query"
            role="progressbar"
          >
            <div
              className="MuiLinearProgress-bar-400 MuiLinearProgress-barColorPrimary-401 MuiLinearProgress-bar1Indeterminate-403"
              style={Object {}}
            />
            <div
              className="MuiLinearProgress-bar-400 MuiLinearProgress-barColorPrimary-401 MuiLinearProgress-bar2Indeterminate-404"
              style={Object {}}
            />
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-340"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-345 MuiTableCell-body-347"
          scope={undefined}
        >
          <a>
            Some Client
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Clients List with no clients 1`] = `
<div>
  <h2
    className="MuiTypography-root-232 MuiTypography-title-238 MuiTypography-gutterBottom-249"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-256 ClientsList-root-228"
  >
    <thead
      className="MuiTableHead-root-257"
    >
      <tr
        className="MuiTableRow-root-258 MuiTableRow-head-261"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-263 MuiTableCell-head-264"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-271"
    >
      <tr
        className="MuiTableRow-root-258"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-263 MuiTableCell-body-265"
          scope={undefined}
        >
          <div
            className="MuiInput-root-272 MuiInput-underline-276"
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-280"
              defaultValue={undefined}
              disabled={undefined}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-263 MuiTableCell-body-265 ClientsList-actionCell-230"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-229"
          >
            <button
              className="MuiButtonBase-root-300 MuiButton-root-285 MuiButton-flatPrimary-287"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-286"
              >
                Add
              </span>
              <span
                className="MuiTouchRipple-root-303"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Product Editor when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-569 MuiTypography-display3-571 MuiTypography-gutterBottom-586"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-608 MuiButton-root-593 MuiButton-raised-598 MuiButton-raisedPrimary-599 ProductEditor-button-568"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-594"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-611"
        />
      </button>
      <button
        className="MuiButtonBase-root-608 MuiButton-root-593 MuiButton-raised-598 ProductEditor-button-568"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-594"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-611"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-619 MuiFormControl-marginNormal-620 EditableTextField-textField-618"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-628 MuiInputLabel-root-623 MuiInputLabel-formControl-624 MuiInputLabel-animated-627 MuiInputLabel-shrink-626"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-633 MuiInput-formControl-634 MuiInput-underline-637"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-641"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-647 MuiTypography-display3-649 MuiTypography-gutterBottom-664"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-686 MuiButtonBase-disabled-687 MuiButton-root-671 MuiButton-raised-676 MuiButton-raisedPrimary-677 MuiButton-disabled-680 ProductEditor-button-646"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-672"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-686 MuiButtonBase-disabled-687 MuiButton-root-671 MuiButton-raised-676 MuiButton-disabled-680 ProductEditor-button-646"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-672"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-690 MuiFormControl-marginNormal-691 EditableTextField-textField-689"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-699 MuiInputLabel-root-694 MuiInputLabel-formControl-695 MuiInputLabel-animated-698 MuiInputLabel-shrink-697"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-704 MuiInput-disabled-707 MuiInput-formControl-705 MuiInput-underline-708"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-712 MuiInput-disabled-707"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor with a product 1`] = `
<form>
  <h1
    className="MuiTypography-root-491 MuiTypography-display3-493 MuiTypography-gutterBottom-508"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-530 MuiButton-root-515 MuiButton-raised-520 ProductEditor-button-490"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-516"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-533"
        />
      </button>
      <button
        className="MuiButtonBase-root-530 MuiButton-root-515 MuiButton-raised-520 MuiButton-raisedSecondary-522 ProductEditor-button-490"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-516"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-533"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-541 MuiFormControl-marginNormal-542 EditableTextField-textField-540"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-550 MuiInputLabel-root-545 MuiInputLabel-formControl-546 MuiInputLabel-animated-549 MuiInputLabel-shrink-548"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-555 MuiInput-formControl-556 MuiInput-underline-559"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-563"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;
